# RbotLite

./: .gitignore  Dockerfile  README.md  compose.base.yaml  compose.dev.yaml  compose.prod.yaml  justfile  main.py  pyproject.toml
.config/: .env.example
src/rbot/bootstrap/: cli.py
src/rbot/bootstrap/entrypoint/: discord_bot.py
src/rbot/infrastracture/: config_loader.py
src/rbot/infrastracture/database/: __init__.py  provider.py
src/rbot/infrastracture/database/alembic/: config.py
src/rbot/infrastracture/database/alembic/migrations/: env.py
src/rbot/infrastracture/database/alembic/migrations/versions/: f215e1f2ff8b_initial.py
src/rbot/presentation/discord/cogs/: misc.py  ping.py
src/rbot/presentation/discord_bot/cogs/: admin_voice.py  embed_builder.py  misc.py
src/rbot/presentation/discord_bot/embed_builder/: __init__.py  components.py  enums.py  labels.py  validation.py
